KNN funcinando salvando arquivo de saida teste com for pricisa mudar para 100

--- a/trabalhoFinal/TrabalhoFinal.ipynb
+++ b/trabalhoFinal/TrabalhoFinal.ipynb
@@ -11,50 +11,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<open file 'output.txt', mode 'a' at 0x7efda54ddd20>  \n",
-      "<open file 'output.txt', mode 'a' at 0x7efda54ddd20> 1\n",
-      "<open file 'output.txt', mode 'a' at 0x7efda54ddd20> \n",
-      "\n",
-      "<open file 'output.txt', mode 'a' at 0x7efda54ddd20>  \n",
-      "<open file 'output.txt', mode 'a' at 0x7efda54ddd20> 1\n",
-      "<open file 'output.txt', mode 'a' at 0x7efda54ddd20> \n",
-      "\n",
-      "<open file 'output.txt', mode 'a' at 0x7efda54ddd20>  \n",
-      "<open file 'output.txt', mode 'a' at 0x7efda54ddd20> 1\n",
-      "<open file 'output.txt', mode 'a' at 0x7efda54ddd20> \n",
-      "\n",
-      "<open file 'output.txt', mode 'a' at 0x7efda54ddc90>  \n",
-      "<open file 'output.txt', mode 'a' at 0x7efda54ddc90> 2\n",
-      "<open file 'output.txt', mode 'a' at 0x7efda54ddc90> \n",
-      "\n",
-      "<open file 'output.txt', mode 'a' at 0x7efda54ddc90>  \n",
-      "<open file 'output.txt', mode 'a' at 0x7efda54ddc90> 2\n",
-      "<open file 'output.txt', mode 'a' at 0x7efda54ddc90> \n",
-      "\n",
-      "<open file 'output.txt', mode 'a' at 0x7efda54ddc90>  \n",
-      "<open file 'output.txt', mode 'a' at 0x7efda54ddc90> 2\n",
-      "<open file 'output.txt', mode 'a' at 0x7efda54ddc90> \n",
-      "\n",
-      "<open file 'output.txt', mode 'a' at 0x7efda54ddd20>  \n",
-      "<open file 'output.txt', mode 'a' at 0x7efda54ddd20> 3\n",
-      "<open file 'output.txt', mode 'a' at 0x7efda54ddd20> \n",
-      "\n",
-      "<open file 'output.txt', mode 'a' at 0x7efda54ddd20>  \n",
-      "<open file 'output.txt', mode 'a' at 0x7efda54ddd20> 3\n",
-      "<open file 'output.txt', mode 'a' at 0x7efda54ddd20> \n",
-      "\n",
-      "<open file 'output.txt', mode 'a' at 0x7efda54ddd20>  \n",
-      "<open file 'output.txt', mode 'a' at 0x7efda54ddd20> 3\n",
-      "<open file 'output.txt', mode 'a' at 0x7efda54ddd20> \n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import pandas\n",
     "import matplotlib.pyplot as plt\n",
@@ -68,7 +25,7 @@
     "arquivo = pandas.read_csv('datasets/numericos.csv', sep=',')\n",
     "dados = pandas.DataFrame(arquivo)\n",
     "\n",
-    "for k in range(1,6):\n",
+    "for k in range(1,3):\n",
     "    c1=randint(2,51)\n",
     "    c2=randint(2,51)\n",
     "    x1 = dados.iloc[:,[1,c1,c2]]\n",
@@ -100,22 +57,13 @@
     "    y1_previsto = clf.predict(x1_teste)\n",
     "\n",
     "    with open('output.txt', 'a') as f:    \n",
-    "        print >>f,'Variaveis'\n",
-    "        print f,' '\n",
-    "        print f,k\n",
-    "        print f,'\\n'\n",
-    "        print >> f, c1,c2\n",
-    "        print >>f,'\\n'\n",
-    "        print >>f,'Matriz de confusão'\n",
-    "        print >> f,' '\n",
-    "        print >> f,k\n",
-    "        print >> f,'\\n'\n",
+    "        print >> f,'---------------------------------Teste '+str(k)+'--------------------------'\n",
+    "        print >>f,'Variaveis '+str(c1)+' '+str(c2)\n",
+    "        print >>f,'Matriz de confusão '\n",
     "        print >>f,confusion_matrix(y1_teste,y1_previsto)\n",
-    "        print >>f,'resulatdo classificação'\n",
-    "        print >> f,' '\n",
-    "        print >> f,k\n",
-    "        print >> f,'\\n'\n",
-    "        print  >>f,classification_report(y1_teste,y1_previsto)"
+    "        print >>f,'resulatdo classificação '\n",
+    "        print >>f,classification_report(y1_teste,y1_previsto)\n",
+    "        print >>f,'\\n-----------------------------------------------------------------------\\n'"
    ]
   },
   {
